gitops/templates/cilium-default-deny.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: default-deny
  namespace: REPLACE_WITH_NAMESPACE
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: REPLACE_WITH_NAMESPACE
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: REPLACE_WITH_NAMESPACE
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - kube-apiserver
